--- a/package.json
+++ b/package.json
@@ -8,20 +8,21 @@
     "start": "next start",
     "lint": "eslint src",
     "test": "jest",
-		"test:watch": "yarn test --watch",
+    "test:watch": "yarn test --watch",
     "postinstall": "husky install",
     "prepare": "husky install"
   },
   "lint-staged": {
     "src/**/*": [
       "yarn lint --fix",
-			"yarn test --bail"
+      "yarn test --findRelatedTests --bail"
     ]
   },
   "dependencies": {
     "next": "11.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.14.5",
@@ -29,8 +30,10 @@
     "@testing-library/react": "^12.0.0",
     "@types/jest": "^26.0.23",
     "@types/react": "^17.0.11",
+    "@types/styled-components": "^5.1.22",
     "@typescript-eslint/eslint-plugin": "^4.28.0",
     "@typescript-eslint/parser": "^4.28.0",
+    "babel-plugin-styled-components": "^2.0.2",
     "eslint": "7.29.0",
     "eslint-config-next": "11.0.1",
     "eslint-config-prettier": "^8.3.0",
@@ -40,6 +43,7 @@
     "husky": "^6.0.0",
     "jest": "^27.0.5",
     "jest-dom": "^4.0.0",
+    "jest-styled-components": "^7.0.8",
     "lint-staged": "^11.0.0",
     "prettier": "2.3.2",
     "typescript": "^4.3.4"
