--- a/.babelrc
+++ b/.babelrc
@@ -3,7 +3,23 @@
 	"plugins": [
 		[
 			"babel-plugin-styled-components",
-			{ "ssr": true }
+			{
+				"ssr": true,
+				"displayName": true
+			}
 		]
-	]
+	],
+	"env": {
+		"test": {
+			"plugins": [
+				[
+					"babel-plugin-styled-components",
+					{
+						"ssr": false,
+						"displayName": false
+					}
+				]
+			]
+		}
+	}
 }
