--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "styled-media-query": "^2.1.2"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.14.5",
