--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.14.5",
+    "@testing-library/dom": "^8.11.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
+    "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^26.0.23",
     "@types/react": "^17.0.11",
     "@types/styled-components": "^5.1.22",
