--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,6 +36,7 @@
 		"react/react-in-jsx-scope": "off",
 		"@typescript-eslint/explicit-module-boundary-types": "off",
 		"@typescript-eslint/no-unused-vars": "error",
+		"@typescript-eslint/no-non-null-assertion": "off",
 		"no-console": "error",
 		"no-debugger": "error"
 	}
