--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,6 +37,7 @@
 		"@typescript-eslint/explicit-module-boundary-types": "off",
 		"@typescript-eslint/no-unused-vars": "error",
 		"@typescript-eslint/no-non-null-assertion": "off",
+		"@typescript-eslint/no-non-null-asserted-optional-chain": "off",
 		"no-console": "error",
 		"no-debugger": "error"
 	}
